# users-registration-qml

./: .gitignore  CMakeLists.txt  README.md  docker-compose-test.yml  docker-compose.yml  main.cpp  run-seed.sh
domain/datasource/: Datasource.h
domain/dtos/: qmldto.cpp  qmldto.h
domain/entities/birthdate/: birthdate.cpp  birthdate.h
domain/entities/connectionOptions/: connectionOptions.h
domain/entities/user/: user.cpp  user.h
domain/errors/: errorhandler.h
global/config/: database.h  qml-style.h  qml.h
global/test/: testdatabase-options.h
infraestructure/db/: postgredatasource.cpp  postgredatasource.h
interface/table/: userTableModel.cpp  userTableModel.h
qml/: Main.qml
qml/components/: ActionIcon.qml  BirthdateSelection.qml  Button.qml  Input.qml
qml/js/: generate.js  globals.js
qml/js/global/: backend.js
qml/js/helpers/: get-data-from-url.helper.js
qml/sections/: SearchUserSection.qml  TableHeaderSection.qml  TableRenderingSection.qml  TableSection.qml  UserInputSection.qml
qml/testing/: test.cpp
qml/testing/components/: tst_actionicon.qml  tst_birthdateselection.qml  tst_custombutton.qml  tst_input.qml
qml/testing/helpers/: insert-text.helper.js
qml/views/: ErrorView.qml  InsertUrlView.qml
seed/: package-lock.json  package.json  tsconfig.json
seed/src/: app.ts
seed/src/database/: postgresdatabase.ts
seed/src/seed/: users.ts
testing/domain/dtos/: test_qmldto.cpp
testing/domain/entities/birthdate/: test_birthdate.cpp
testing/domain/entities/connectionOptions/: test_connectionOptions.cpp
testing/domain/entities/user/: test_user.cpp
testing/infraestructure/db/: helper_invalidConnection.h  test_postgredatasource.cpp
views/: ActionButton.qml  CustomActionButton.qml  CustomButton.qml  CustomInput.qml  ErrorView.qml  InputComponent.qml  InsertDbUrlView.qml  Logindb.qml  Main.qml  MongoUrlMenu.qml  MyButton.qml  SearchUserSection.qml  SelectBirthdate.qml  TableHeaderSection.qml  TableSection.qml  UserInputSection.qml  UsersTable.qml
views/js/: splitOptions.js  validate.js
